K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: commands-depl
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: commandsservice
    template: 
        metadata: 
            labels: 
                app: commandsservice
        spec: 
            containers:
              - name: commandsservice
                image : icykcypher/commandsservice:latest
---
apiVersion: v1
kind: Service
metadata: 
    name: commands-clusterip-srv
spec:  
    type: ClusterIP
    selector: 
        app: commandsservice
    ports:
        - name: commandsservice
          protocol: TCP
          port: 54321
          targetPort: 8080
